[gd_scene load_steps=10 format=3 uid="uid://bvgsk4vj1e1h"]

[ext_resource type="Texture2D" uid="uid://cgl7bai48jjk6" path="res://scenes/beasts/animated_beasts_bg.tres" id="1_8dihy"]
[ext_resource type="Script" path="res://scenes/beasts/beasts.gd" id="1_p0vk8"]
[ext_resource type="Texture2D" uid="uid://wp2uccqbn5bk" path="res://assets/sprites/beasts/frame-grid-beasts.png" id="2_uctc7"]
[ext_resource type="Texture2D" uid="uid://4d4j4slxovwy" path="res://assets/sprites/beasts/frame-selected-beast_.png" id="4_ovyxo"]
[ext_resource type="Texture2D" uid="uid://dr3b3sjrm5rmi" path="res://assets/sprites/beasts/main_character.png" id="5_vdeaj"]
[ext_resource type="Theme" uid="uid://djla0tgj1q1be" path="res://assets/themes/UI_theme_PC.tres" id="6_os8m5"]
[ext_resource type="Texture2D" uid="uid://bal16jthn2oyw" path="res://assets/sprites/beasts/header_text12.png" id="7_lr1id"]
[ext_resource type="FontFile" uid="uid://dhae6exylya53" path="res://assets/fonts/1980/1980v23P04.ttf" id="8_rlwmp"]
[ext_resource type="Texture2D" uid="uid://c8oujqsak6ndh" path="res://assets/sprites/beasts/beasts.png" id="9_0mcdn"]

[node name="Beasts" type="Node2D"]
script = ExtResource("1_p0vk8")
metadata/_edit_horizontal_guides_ = [252.0, 240.0, 77.0]

[node name="BeastsBackground" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8dihy")
metadata/_edit_lock_ = true

[node name="GridFrame" type="TextureRect" parent="."]
offset_left = 332.0
offset_top = 13.0
offset_right = 459.0
offset_bottom = 245.0
texture = ExtResource("2_uctc7")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 341.0
offset_top = 21.0
offset_right = 455.0
offset_bottom = 243.0
columns = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 112.0
offset_top = 48.0
offset_right = 313.0
offset_bottom = 170.0

[node name="MainFrame" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("4_ovyxo")
metadata/_edit_lock_ = true

[node name="BestName" type="Label" parent="."]
offset_left = 308.0
offset_top = 20.0
offset_right = 348.0
offset_bottom = 46.0
text = "
"

[node name="MainCharacter" type="Sprite2D" parent="."]
position = Vector2(32, 96)
texture = ExtResource("5_vdeaj")
centered = false

[node name="PlayBtn" type="Button" parent="."]
offset_left = 160.0
offset_top = 192.0
offset_right = 201.0
offset_bottom = 223.0
theme = ExtResource("6_os8m5")
text = "Play"

[node name="QuitBtn" type="Button" parent="."]
offset_left = 224.0
offset_top = 192.0
offset_right = 266.0
offset_bottom = 223.0
theme = ExtResource("6_os8m5")
text = "Quit"

[node name="HeaderTextTexture" type="TextureRect" parent="."]
visible = false
offset_left = 129.0
offset_top = 82.0
offset_right = 297.0
offset_bottom = 133.692
size_flags_vertical = 4
texture = ExtResource("7_lr1id")
expand_mode = 5
metadata/_edit_lock_ = true

[node name="RarityValueLabel" type="Label" parent="."]
visible = false
offset_left = 227.0
offset_top = 63.0
offset_right = 288.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("8_rlwmp")
text = "Legendary"

[node name="NameValueLabel" type="Label" parent="."]
visible = false
offset_left = 144.0
offset_top = 63.0
offset_right = 206.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("8_rlwmp")
text = "Snowflake"

[node name="CreatureTexture" type="Sprite2D" parent="."]
position = Vector2(208, 120)
texture = ExtResource("9_0mcdn")
hframes = 4
vframes = 2

[connection signal="pressed" from="PlayBtn" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_quit_pressed"]
